force-app/main/default/objects/App_Settings__c/App_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DocuPad App Settings</description>
    <label>App Settings</label>
</CustomObject>