force-app/main/default/objects/App_Settings__c/fields/Attach_as_PDF__c.field-meta.xml
<CustomField>
    <fullName>Attach_as_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach as PDF</label>
    <type>Checkbox</type>
</CustomField>