force-app/main/default/objects/App_Settings__c/fields/Compose_Email__c.field-meta.xml
<CustomField>
    <fullName>Compose_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compose Email</label>
    <type>Checkbox</type>
</CustomField>