force-app/main/default/objects/App_Settings__c/fields/DocumentCSS__c.field-meta.xml
<CustomField>
    <fullName>DocumentCSS__c</fullName>
    <description>This field is to defined custom CSS for Document</description>
    <inlineHelpText>Custom CSS for Document</inlineHelpText>
    <label>DocumentCSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>