force-app/main/default/objects/App_Settings__c/fields/End_Identifier__c.field-meta.xml
<CustomField>
    <fullName>End_Identifier__c</fullName>
    <label>End Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>