force-app/main/default/objects/App_Settings__c/fields/Named_Cred__c.field-meta.xml
<CustomField>
    <fullName>Named_Cred__c</fullName>
    <description>If you have selected &quot;Use Named Cred&quot; then specify Name Credential name</description>
    <inlineHelpText>&quot;Name Credential&quot; name</inlineHelpText>
    <label>Named Cred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>