force-app/main/default/objects/App_Settings__c/fields/RestAPIVersion__c.field-meta.xml
<CustomField>
    <fullName>RestAPIVersion__c</fullName>
    <description>This is used to specify Rest API Version</description>
    <inlineHelpText>Rest API Version</inlineHelpText>
    <label>RestAPIVersion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>