force-app/main/default/objects/App_Settings__c/fields/Start_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Start_Identifier__c</fullName>
    <label>Start Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>