force-app/main/default/objects/App_Settings__c/fields/Use_Named_Cred__c.field-meta.xml
<CustomField>
    <fullName>Use_Named_Cred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option means to retrieve the meta data information use Named Cred and Provide Name Cred Name</description>
    <inlineHelpText>Named Cred and Provide Name Cred Name</inlineHelpText>
    <label>Use Named Cred</label>
    <type>Checkbox</type>
</CustomField>