force-app/main/default/objects/App_Settings__c/fields/Use_Page_Session__c.field-meta.xml
<CustomField>
    <fullName>Use_Page_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option means get the session information from VF Page</description>
    <label>Use Page Session</label>
    <type>Checkbox</type>
</CustomField>