force-app/main/default/objects/App_Settings__c/fields/Use_User_Session__c.field-meta.xml
<CustomField>
    <fullName>Use_User_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option means get the session information from User Session</description>
    <inlineHelpText>Get User Session</inlineHelpText>
    <label>Use User Session</label>
    <type>Checkbox</type>
</CustomField>